--- a/css/style.css
+++ b/css/style.css
@@ -9,6 +9,11 @@ body
     background: #C7C7C7;
 }
 
+a
+{
+    text-decoration: none;
+}
+
 div.content
 {
     width: 74%;
@@ -93,7 +98,6 @@ div.profile
     width: 60%;
     margin: 130px auto 0 auto;
     background-color: #FFFFFF;
-    border: blue 0.1px solid;
     border-radius: 7px;
     box-shadow: 2px 2px 20px 1px rgba(0, 0, 0, 0.4);
 }
@@ -106,3 +110,145 @@ div.profile
     border: white 2px solid;
     border-radius: 50%;
 }
+
+.my-name
+{
+    text-align: center;
+    margin: 10px 0 6px 0;
+    color: #4A4E52;
+    font-family: Segoe UI;
+    letter-spacing: 1px;
+    font-weight: 620;
+    font-size: 25px;
+}
+
+.umy-name
+{
+    text-align: center;
+    font-size: 14px;
+    color: #4A4E52;
+    font-family: Segoe UI;
+    font-weight: 500;
+}
+
+.social-menu
+{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+
+.social-menu ul
+{
+    position: absolute;
+    top: 49%;
+    padding: 0;
+    display: flex;
+}
+
+.social-menu ul li
+{
+    list-style: none;
+    line-height: 60px;
+}
+
+.social-menu ul li .fa
+{
+    font-size: 25px;
+    line-height: 60px;
+}
+
+.social-menu ul li a
+{
+    position: relative;
+    display: block;
+    width: 67px;
+    height: 60px;
+    border-radius: 50%;
+    background-color: #fff;
+    text-align: center;
+    transition: .6s;
+    color: #000000;
+}
+
+.social-menu ul li a:hover
+{
+    transform: translate(0, -5px);
+}
+
+.social-menu ul li:nth-child(1) a:hover
+{
+    color : #3b5999;
+}
+
+.social-menu ul li:nth-child(2) a:hover
+{
+    color: #55acee;
+}
+
+.social-menu ul li:nth-child(3) a:hover
+{
+    color: #0077B5;
+}
+
+.social-menu ul li:nth-child(4) a:hover
+{
+    color: #e4405f;
+}
+
+.card-hr
+{
+    margin: 73px auto 15px auto;
+    height: 1px;
+    width: 93%;
+    border-width: 0;
+    background-color: #008AC2;
+}
+
+.profile-quote
+{
+    text-align: center;
+    margin: auto;
+    font-size: 14px;
+    color: #4A4E52;
+    font-family: Segoe UI;
+    font-weight: 500;
+    width: 83%;
+}
+
+  .arrow-right
+  {
+      position: absolute;
+      margin: 10px auto auto 120px;
+      transform: translate(-50%, -50%);
+  }
+
+  .arrow-right span
+  {
+      display: flex;
+      width: 20px;
+      height: 20px;
+      margin: -10px;
+      animation: animate 2s infinite;
+      animation-delay: -0.1s;
+      color: rgb(16, 7, 141);
+  }
+
+  @keyframes animate
+  {
+      0%
+      {
+          opacity: 0;
+          transform: translate(0px, 15px);
+      }
+      50%
+      {
+          opacity: 1;
+      }
+      100%
+      {
+          opacity: 0;
+          transform: translate(50px, 15px);
+      }
+  }
