--- a/css/style.css
+++ b/css/style.css
@@ -66,8 +66,9 @@ div.inner-3
     box-shadow: 2px 6px 20px 5px rgba(0, 0, 0, 0.1);
 }
 
-div.inner
+div.inner-div
 {
+    display: flex;
     width: 99.5%;
     height: 610px;
     background-color: #FFFFFF;
@@ -81,7 +82,6 @@ div.profile
 {
     width: 50%;
     height: 560px;
-    border-right: #A4A6A7 0.1px solid;
     padding-top: 40px;
 }
 
@@ -252,3 +252,49 @@ div.profile
           transform: translate(50px, 15px);
       }
   }
+
+  div.container
+{
+    width: 50%;
+    height: 100%;
+    box-shadow: -3px 0 40px 10px rgba(0, 0, 0, 0.2);
+    overflow: auto;
+}
+
+
+.main-name-bg
+{
+    height: 40px;
+    width: 100%;
+    background-color: #FFFFFF;
+    position: sticky;
+    top: 0;
+}
+
+.main-name
+{
+    background-color: #0199D8;
+    display: block;
+    width: 130px;
+    padding: 11px 10px 11px 45px;
+    color: #ffffff;
+    font-family: Arial, Helvetica, sans-serif;
+    font-size: 14px;
+    letter-spacing: 1px;
+    margin-left: -3px;
+    margin-top: 40px;
+}
+
+.inner-container
+{
+    padding: 40px 45px 0 45px;
+}
+
+.container-img
+{
+    height: 50%;
+    width: 100%;
+}
+
+
+
