--- a/css/responsive.css
+++ b/css/responsive.css
@@ -1,4 +1,230 @@
 @media only screen and (max-width:960px) {
+    .main-menu
+    {
+        display: none;
+    }
+
+    .sidebar-menu
+    {
+        display: flex;
+        width: 100%;
+        position: fixed;
+        z-index: 1;
+    }
+
+    .responsive-menu
+    {
+        background-color: #F3F3F3;
+        display: block;
+    }
+
+    .responsive-menu ul
+    {
+        float: right;
+        display: flex;
+        list-style: none;
+        margin-right: 40px;
+        }
+
+    .responsive-menu ul li
+    {
+        padding: 18px 15px;
+    }
+
+    .responsive-menu ul li a
+    {
+        color: #6F7275;
+        padding: 15px;
+        font-family: Segoe UI;
+        font-size: 14px;
+        font-weight: 500;
+    }
+
+    .fa-home, .fa-user, .fa-briefcase, .fa-phone
+    {
+        padding-right: 5px;
+    }
+
+    .responsive-menu ul li a:hover
+    {
+        color: #019BDB;
+    }
+
+    .active
+    {
+        color: #019BDB;
+    }
+
+    #sidebar
+    {
+        display: none;
+        overflow: hidden auto;
+    }
+
+    .sidebar-hide-show {
+        height: 100%;
+        width: 30%;
+    }
+
+    .logo-img
+    {
+        height: 60px;
+        width: 60px;
+    }
+
+    .sidebar-content
+    {
+        margin-top: 30px;
+    }
+
+    .about-content
+    {
+        margin-left: 8%;
+    }
+
+    h2.sidebar-about
+    {
+        font-size: 18px;
+    }
+
+    h2.sidebar-about:before
+    {
+        height: 4px;
+    }
+
+    h2.sidebar-about:after
+    {
+        height: 4px;
+    }
+
+    p.sidebar-about-p
+    {
+        font-size: 13px;
+    }
+
+    p.sidebar-content-p
+    {
+        font-size: 13px;
+    }
+
+    h2.sidebar-about-get
+    {
+        font-size: 18px;
+    }
+
+    h2.sidebar-about-get:before
+    {
+        height: 4px;
+    }
+
+    h2.sidebar-about-get:after
+    {
+        height: 4px;
+    }
+
+    .sidebar-social-menu ul
+    {
+        margin: 35px 0 30px 0;
+    }
+
+    .sidebar-social-menu ul li .fa
+    {
+        font-size: 21px;
+    }
+
+    .copyright
+    {
+        margin: 10px auto 20px auto;
+    }
+
+    .cipyright-link
+    {
+        font-size: 13px;
+    }
+
+    div.content
+    {
+        width: 100%;
+        height: 100vh;
+        margin: auto;
+        padding-top: 55px;
+        border: none;
+        animation: content-animation 1.5s ease-in-out;
+        overflow: hidden auto;
+    }
+
+    @keyframes content-animation{
+        0%
+        {
+            transform: translate(0, 700px);
+        }
+        100%
+        {
+            transform: translate(0, 0);
+        }
+    }
+
+    div.outer-div
+    {
+        width: 100%;
+        height: 100vh
+    }
+
+    div.inner-1
+    {
+        width: 99.5%;
+        height: 100vh;
+    }
+
+    div.inner-2
+    {
+        width: 99.5%;
+        height: 100vh;
+    }
+
+    div.inner-3
+    {
+        width: 99.5%;
+        height: 100vh;
+    }
+
+    div.inner-div
+    {
+        width: 99.5%;
+        height: 100vh;
+        overflow: hidden auto;
+    }
+}
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+/*@media only screen and (max-width:960px) {
     body
     {
         width: 100%;
@@ -179,7 +405,7 @@
     .sidebar-btn
     {
         display: none;
-    }*/
+    }*//*
 
     div.profile
     {
@@ -246,7 +472,7 @@
     border-radius: 5px;
     cursor: pointer;
     transition: all 0.5s ease-in-out;
-    /*border: 3px solid #fff; */
+    /*border: 3px solid #fff; *//*
     background: #50ADD3;
     z-index: 2;
 }
@@ -284,7 +510,7 @@
     transform: translateY(12px);
 }
 
-/*ANIMATION*/
+/*ANIMATION*//*
 
 .sidebar-btn.open .sidebar-btn_burger
 {
@@ -301,4 +527,4 @@
 {
     transform: rotate(-45deg) translate(-184px, -184px);
 }
-}
+}*/
