--- a/css/style.css
+++ b/css/style.css
@@ -9,6 +9,7 @@ body
     background: #C7C7C7;
     height: 100%;
     width: 100%;
+    position: fixed;
 }
 
 a
@@ -33,7 +34,7 @@ a
 {
     list-style: none;
     margin: 0;
-    border-top: 7px solid #019BDB;
+    border-top: 7px solid rgb(44, 44, 230);
 }
 
 .menu ul li
@@ -61,62 +62,23 @@ a
 
 .menu ul li a:hover
 {
-    color: #019BDB;
+    color: rgb(44, 44, 230);
 }
 
 .active
 {
-    color: #019BDB;
+    color: rgb(44, 44, 230);
 }
 
 .sidebar-menu
 {
-    display: flex;
+    display: none;
 }
 
 .responsive-menu
     {
-        width: 100%;
-        background-color: #F3F3F3;
         display: none;
     }
-
-    /*.responsive-menu ul
-    {
-        float: right;
-        display: flex;
-        list-style: none;
-    }
-
-    .responsive-menu ul li
-    {
-        padding: 18px 15px;
-        position: relative;
-    }
-
-    .responsive-menu ul li a
-    {
-        color: #6F7275;
-        padding: 15px;
-        font-family: Segoe UI;
-        font-size: 14px;
-        font-weight: 500;
-    }
-
-    .fa-home, .fa-user, .fa-briefcase, .fa-phone
-    {
-        padding-right: 5px;
-    }
-
-    .responsive-menu ul li a:hover
-    {
-        color: #019BDB;
-    }
-
-    .active
-    {
-        color: #019BDB;
-    }*/
 
 .sidebar-btn
 {
@@ -126,7 +88,7 @@ a
     align-items: center;
     width: 50px;
     height: 42px;
-    margin: 10px 0 0 10px;
+    margin: 7px 0 0 12px;
     border-radius: 5px;
     cursor: pointer;
     transition: all 0.5s ease-in-out;
@@ -192,6 +154,16 @@ a
     overflow: hidden auto;
 }
 
+.sidebar-header
+{
+    display: none;
+}
+
+.profile1
+  {
+      display: none;
+  }
+
 .sidebar-hide-show {
     height: 100vh;
     width: 25%;
@@ -218,15 +190,41 @@ a
 {
     display: flex;
     justify-content: center;
-    margin-top: 20px;
+    margin: 50px 0;
 }
 
-.logo-img
+/*.logo-img
 {
     height: 80px;
     width: 80px;
     border-radius: 50%;
     border: 2px solid #ffffff;
+}*/
+
+.navbar-brand
+{
+    font-size: 25px;
+    color: black;
+    font-weight: 900;
+    font-family: Arial, Helvetica, sans-serif;
+    margin-left: -9px;
+    position: relative;
+}
+
+.navbar-brand0
+{
+    font-size: 25px;
+    font-weight: 900;
+    font-family: Arial, Helvetica, sans-serif;
+}
+
+.navbar-brand0 span
+{
+    border-radius: 50%;
+    padding: 0px 8px;
+    color: #ffffff;
+    background: rgb(44, 44, 230);
+    position: relative;
 }
 
 .sidebar-content
@@ -254,7 +252,7 @@ h2.sidebar-about
     padding: 5px 10px;
     margin:0 auto;
     color: white;
-    background: #0199D8;
+    background: rgb(44, 44, 230);
     font-family: Arial, Helvetica, sans-serif;
     letter-spacing: 2px;
     position: relative;
@@ -314,7 +312,7 @@ h2.sidebar-about-get
     padding: 5px 10px;
     margin:15px auto;
     color: white;
-    background: #0199D8;
+    background: rgb(44, 44, 230);
     font-family: Arial, Helvetica, sans-serif;
     letter-spacing: 2px;
     position: relative;
@@ -375,26 +373,6 @@ h2.sidebar-about-get:after
     transform: translate(-3px, -5px);
 }
 
-/*.sidebar-social-menu ul li:nth-child(1)
-{
-    background-color: #3b5999;
-}
-
-.sidebar-social-menu ul li:nth-child(2)
-{
-    background-color: #55acee;
-}
-
-.sidebar-social-menu ul li:nth-child(3)
-{
-    background-color: #0077B5;
-}
-
-.sidebar-social-menu ul li:nth-child(4)
-{
-    background-color: #e4405f;
-}*/
-
 .sidebar-social-menu ul li .fa
 {
     font-size: 25px;
@@ -447,7 +425,7 @@ h2.sidebar-about-get:after
 {
     font-size: 14px;
     font-family: Segoe UI;
-    color: #BF1A58;
+    color: #C92029;
 }
 
 div.content
@@ -456,8 +434,8 @@ div.content
     height: 610px;
     background-color: #FFFFFF;
     margin: auto auto auto 10%;
-    border-left: #009BDB 9px solid;
-    border-right: #009BDB 9px solid;
+    border-left: rgb(44, 44, 230) 9px solid;
+    border-right: rgb(44, 44, 230) 9px solid;
     box-shadow: -10px 6px 40px 20px rgba(0, 0, 0, 0.2);
     animation: content-animation 1.5s ease-in-out;
     overflow: auto;
@@ -526,7 +504,7 @@ div.inner-div
     border-left: #DDDDDD 0.5px solid;
     border-right: #DDDDDD 0.5px solid;
     box-shadow: 2px 6px 20px 5px rgba(0, 0, 0, 0.1);
-    overflow: auto;
+    overflow: hidden;
 }
 
 div.profile
@@ -577,7 +555,7 @@ div.profile
     color: #4A4E52;
     font-family: Segoe UI;
     letter-spacing: 1px;
-    font-weight: 620;
+    font-weight: 640;
     font-size: 20px;
 }
 
@@ -660,7 +638,7 @@ div.profile
     height: 1px;
     width: 93%;
     border-width: 0;
-    background-color: #008AC2;
+    background-color: rgb(44, 44, 230);
 }
 
 .profile-quote
@@ -672,6 +650,11 @@ div.profile
     font-family: Segoe UI;
     font-weight: 500;
     width: 83%;
+}
+
+.arrow-down
+{
+    display: none;
 }
 
   .arrow-right
@@ -721,15 +704,15 @@ div.profile
   {
       height: 40px;
       width: 100%;
+      background: #FFFFFF;
       position: sticky;
       top: 0;
   }
   
   .main-name
   {
-      background-color: #0199D8;
-      display: block;
-      width: 130px;
+      background-color: rgb(44, 44, 230);
+      width: 200px;
       padding: 11px 10px 11px 45px;
       color: #ffffff;
       font-family: Arial, Helvetica, sans-serif;
@@ -752,7 +735,7 @@ div.profile
   
   .inner-container
   {
-      padding: 40px 45px 0 45px;
+      padding: 40px 30px 0 30px;
       display: flex;
       align-items: center;
       justify-content: center;
@@ -763,767 +746,3 @@ div.profile
       height: 50%;
       width: 100%;
   }
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-/**
-{
-    margin: 0;
-    padding: 0;
-}
-
-body
-{
-    background: #C7C7C7;
-    height: 100%;
-    width: 100%;
-}
-
-a
-{
-    text-decoration: none;
-}
-
-div.content
-{
-    width: 74%;
-    height: 610px;
-    background-color: #FFFFFF;
-    margin: auto;
-    border-left: #009BDB 9px solid;
-    border-right: #009BDB 9px solid;
-    box-shadow: -10px 6px 40px 20px rgba(0, 0, 0, 0.2);
-    animation: content-animation 1.5s ease-in-out;
-    overflow: auto;
-}
-
-@keyframes content-animation{
-    0%
-    {
-        transform: translate(0, -700px);
-    }
-    100%
-    {
-        transform: translate(0, 0);
-    }
-}
-
-div.outer-div
-{
-    width: 100%;
-    height: 610px;
-    background-color: #FFFFFF;
-    margin: auto;
-}
-
-div.inner-1
-{
-    width: 99.5%;
-    height: 610px;
-    background-color: #FFFFFF;
-    margin: auto;
-    border-left: #DDDDDD 0.5px solid;
-    border-right: #DDDDDD 0.5px solid;
-    box-shadow: 2px 6px 20px 5px rgba(0, 0, 0, 0.1);
-}
-
-div.inner-2
-{
-    width: 99.5%;
-    height: 610px;
-    background-color: #FFFFFF;
-    margin: auto;
-    border-left: #DDDDDD 0.5px solid;
-    border-right: #DDDDDD 0.5px solid;
-    box-shadow: 2px 6px 20px 5px rgba(0, 0, 0, 0.1);
-}
-
-div.inner-3
-{
-    width: 99.5%;
-    height: 610px;
-    background-color: #FFFFFF;
-    margin: auto;
-    border-left: #DDDDDD 0.5px solid;
-    border-right: #DDDDDD 0.5px solid;
-    box-shadow: 2px 6px 20px 5px rgba(0, 0, 0, 0.1);
-}
-
-div.inner-div
-{
-    display: flex;
-    flex-direction: row;
-    width: 99.5%;
-    height: 610px;
-    background-color: #FFFFFF;
-    margin: auto;
-    border-left: #DDDDDD 0.5px solid;
-    border-right: #DDDDDD 0.5px solid;
-    box-shadow: 2px 6px 20px 5px rgba(0, 0, 0, 0.1);
-    overflow: auto;
-}
-
-div.inner-31
-{
-    display: none;
-}
-
-div.inner-32
-{
-    display: flex;
-    flex-direction: row;
-}
-
-div.profile
-{
-    width: 50%;
-    height: 570px;
-    padding-top: 40px;
-    overflow: auto;
-}
-
-.bg-image
-{
-    height: 200px;
-    width: 100%;
-    display: flex;
-}
-
-.my-profile
-{
-    height: 310px;
-    width: 60%;
-    margin: 130px auto 0 auto;
-    background-color: #FFFFFF;
-    border-radius: 7px;
-    box-shadow: 2px 2px 20px 1px rgba(0, 0, 0, 0.4);
-}
-
-.profile-img
-{
-    height: 105px;
-    width: 100px;
-    margin: -52px 32.5% 0 32.5%;
-    border: white 2px solid;
-    border-radius: 50%;
-    transition: transform .5s;
-    background: #000;
-}
-
-.profile-img:hover
-{
-    transform: scale(1.5);
-}
-
-.my-name
-{
-    text-align: center;
-    margin: 10px 0 6px 0;
-    color: #4A4E52;
-    font-family: Segoe UI;
-    letter-spacing: 1px;
-    font-weight: 620;
-    font-size: 25px;
-}
-
-.umy-name
-{
-    text-align: center;
-    font-size: 14px;
-    color: #4A4E52;
-    font-family: Segoe UI;
-    font-weight: 500;
-}
-
-.social-menu
-{
-    display: flex;
-    justify-content: center;
-    align-items: center;
-}
-
-
-.social-menu ul
-{
-    margin: 20px 0 20px 0;
-    padding: 0;
-    display: flex;
-}
-
-.social-menu ul li
-{
-    list-style: none;
-    transition: .6s;
-}
-
-.social-menu ul li .fa
-{
-    font-size: 25px;
-}
-
-.social-menu ul li a
-{
-    text-align: center;
-    padding: 0 20px 0 20px;
-    transition: .6s;
-    color: #000000;
-}
-
-.social-menu ul li:hover
-{
-    transform: translate(0, -8px);
-}
-
-.social-menu ul li:nth-child(1) a:hover
-{
-    color : #3b5999;
-    text-shadow: 5px 5px 3px #000;
-}
-
-.social-menu ul li:nth-child(2) a:hover
-{
-    color: #55acee;
-    text-shadow: 5px 5px 3px #000;
-}
-
-.social-menu ul li:nth-child(3) a:hover
-{
-    color: #0077B5;
-    text-shadow: 5px 5px 3px #000;
-}
-
-.social-menu ul li:nth-child(4) a:hover
-{
-    color: #e4405f;
-    text-shadow: 5px 5px 5px #000;
-}
-
-.card-hr
-{
-    margin: 0 auto 20px auto;
-    height: 1px;
-    width: 93%;
-    border-width: 0;
-    background-color: #008AC2;
-}
-
-.profile-quote
-{
-    text-align: center;
-    margin: auto;
-    font-size: 14px;
-    color: #4A4E52;
-    font-family: Segoe UI;
-    font-weight: 500;
-    width: 83%;
-}
-
-  .arrow-right
-  {
-      position: absolute;
-      margin: 10px auto auto 120px;
-      transform: translate(-50%, -50%);
-  }
-
-  .arrow-right span
-  {
-      display: flex;
-      width: 20px;
-      height: 20px;
-      margin: -10px;
-      animation: animate 2s infinite;
-      animation-delay: -0.1s;
-      color: rgb(16, 7, 141);
-  }
-
-  @keyframes animate
-  {
-      0%
-      {
-          opacity: 0;
-          transform: translate(0px, 15px);
-      }
-      50%
-      {
-          opacity: 1;
-      }
-      100%
-      {
-          opacity: 0;
-          transform: translate(50px, 15px);
-      }
-  }
-
-  div.container
-{
-    width: 50%;
-    height: 100%;
-    box-shadow: -3px 0 40px 10px rgba(0, 0, 0, 0.2);
-    overflow: auto;
-}
-
-
-.main-name-bg
-{
-    height: 40px;
-    width: 100%;
-    position: sticky;
-    top: 0;
-}
-
-.main-name
-{
-    background-color: #0199D8;
-    display: block;
-    width: 130px;
-    padding: 11px 10px 11px 45px;
-    color: #ffffff;
-    font-family: Arial, Helvetica, sans-serif;
-    font-size: 14px;
-    letter-spacing: 1px;
-    margin-left: -3px;
-    margin-top: 40px;
-    animation: main-name 2s ease-in-out;
-}
-
-@keyframes main-name
-{
-    0%{
-        transform: translate(-1000px, 0);
-    }
-    100%{
-        transform: translate(0, 0);
-    }
-}
-
-.inner-container
-{
-    padding: 40px 45px 0 45px;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-}
-
-.container-img
-{
-    height: 50%;
-    width: 100%;
-}
-
-.menu
-{
-    float: right;
-    margin-top: -30%;
-}
-
-.menu ul
-{
-    list-style: none;
-    margin: 0;
-    border-top: 7px solid #019BDB;
-}
-
-.menu ul li
-{
-    padding: 18px 12px;
-    position: relative;
-    width: auto;
-    background-color: #FFFFFF;
-    border-bottom: 2px solid #F5F5F5;
-}
-
-.menu ul li a
-{
-    color: #6F7275;
-    padding: 3px;
-    font-family: Segoe UI;
-    font-size: 14px;
-    font-weight: 500;
-}
-
-.fa-home, .fa-user, .fa-briefcase, .fa-phone
-{
-    padding-right: 5px;
-}
-
-.menu ul li a:hover
-{
-    color: #019BDB;
-}
-
-.active
-{
-    color: #019BDB;
-}
-
-.sidebar-btn
-{
-    position: absolute;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    width: 50px;
-    height: 42px;
-    margin: -43.5% 0 0 10px;
-    border-radius: 5px;
-    cursor: pointer;
-    transition: all 0.5s ease-in-out;
-    /*border: 3px solid #fff; *//*
-    background: #50ADD3;
-    z-index: 2;
-}
-
-.sidebar-btn_burger
-{
-    width: 38px;
-    height: 4px;
-    background: #555555;
-    border-radius: 5px;
-    box-shadow: 0 2px 5px rgba(255, 101, 47, .2);
-    transition: all .5s ease-in-out;
-}
-
-.sidebar-btn_burger::before,
-.sidebar-btn_burger::after
-{
-    content: '';
-    position: absolute;
-    width: 38px;
-    height: 4px;
-    background: #555555;
-    border-radius: 5px;
-    box-shadow: 0 2px 5px rgba(255, 101, 47, .2);
-    transition: all .5s ease-in-out;
-}
-
-.sidebar-btn_burger::before
-{
-    transform: translateY(-12px);
-}
-
-.sidebar-btn_burger::after
-{
-    transform: translateY(12px);
-}
-
-/*ANIMATION*/
-/*
-.sidebar-btn.open .sidebar-btn_burger
-{
-    transform: translateX(260px);
-    background: transparent;
-    box-shadow: none;
-}
-.sidebar-btn.open .sidebar-btn_burger::before 
-{
-    transform: rotate(45deg) translate(-184px, 184px);
-}
-
-.sidebar-btn.open .sidebar-btn_burger::after
-{
-    transform: rotate(-45deg) translate(-184px, -184px);
-}
-
-#sidebar
-{
-    display: none;
-    overflow: auto;
-}
-
-.sidebar-hide-show {
-    height: 100vh;
-    width: 25%;
-    background: #FAFAFA;
-    background-size: cover;
-    color: black;
-    margin-top: -610px;
-    position: absolute;
-    z-index: 1;
-    box-shadow: 10px 0 50px 10px rgba(0, 0, 0, 0.6);
-    animation: slideme .5s ease-in-out;
-}
-
-@keyframes slideme {
-    0%{
-        transform: translate(-400px);
-    }
-
-    100%{
-        transform: translate(0px);
-    }
-}
-
-.logo
-{
-    display: flex;
-    justify-content: center;
-    margin-top: 20px;
-}
-
-.logo-img
-{
-    height: 80px;
-    width: 80px;
-    border-radius: 50%;
-    border: 2px solid #ffffff;
-}
-
-.sidebar-content
-{
-    width: 90%;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    margin-top: 30px;
-}
-
-.about-content
-{
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    margin-left: 10%;
-}
-
-h2.sidebar-about
-{
-    font-size: 20px;
-    padding: 5px 10px;
-    margin:0 auto;
-    color: white;
-    background: #0199D8;
-    font-family: Arial, Helvetica, sans-serif;
-    letter-spacing: 2px;
-    position: relative;
-    border-radius: 3px;
-}
-
-h2.sidebar-about:before
-{
-    content: '';
-    display: block;
-    min-width: 98%;
-    height: 5px;
-    background: #919191;
-    position: absolute;
-    opacity: 0.8;
-    left: -98%;
-    top: 50%;
-}
-
-h2.sidebar-about:after
-{
-    content: '';
-    display: block;
-    min-width: 86%;
-    height: 5px;
-    background: #919191;
-    position: absolute;
-    opacity: 0.8;
-    right: -86%;
-    top: 50%;
-}
-
-p.sidebar-about-p
-{
-    text-align: center;
-    margin: 15px 4px 0 4px;
-    text-align: justify;
-    font-size: 14px;
-    color: #4A4E52;
-    font-family: Segoe UI;
-    font-weight: 500;
-}
-
-p.sidebar-content-p
-{
-    text-align: center;
-    margin: 15px 4px 0 4px;
-    font-size: 14px;
-    color: #4A4E52;
-    font-family: Segoe UI;
-    font-weight: 500;
-}
-
-h2.sidebar-about-get
-{
-    font-size: 20px;
-    padding: 5px 10px;
-    margin:15px auto;
-    color: white;
-    background: #0199D8;
-    font-family: Arial, Helvetica, sans-serif;
-    letter-spacing: 2px;
-    position: relative;
-    border-radius: 3px;
-}
-
-h2.sidebar-about-get:before
-{
-    content: '';
-    display: block;
-    min-width: 98%;
-    height: 5px;
-    background: #919191;
-    position: absolute;
-    opacity: 0.8;
-    left: -98%;
-    top: 50%;
-}
-
-h2.sidebar-about-get:after
-{
-    content: '';
-    display: block;
-    min-width: 55%;
-    height: 5px;
-    background: #919191;
-    position: absolute;
-    opacity: 0.8;
-    right: -55%;
-    top: 50%;
-}
-
-.sidebar-social-menu
-{
-    display: flex;
-    justify-content: center;
-    align-items: center;
-}
-
-
-.sidebar-social-menu ul
-{
-    padding: 0;
-    margin: 30px 0 30px 0;
-    display: flex;
-}
-
-.sidebar-social-menu ul li
-{
-    list-style: none;
-    transition: .6s;
-    border-radius: 50%;
-    margin: 0 20px 0 20px;
-}
-
-.sidebar-social-menu ul li:hover
-{
-    transform: translate(-3px, -5px);
-}
-
-/*.sidebar-social-menu ul li:nth-child(1)
-{
-    background-color: #3b5999;
-}
-
-.sidebar-social-menu ul li:nth-child(2)
-{
-    background-color: #55acee;
-}
-
-.sidebar-social-menu ul li:nth-child(3)
-{
-    background-color: #0077B5;
-}
-
-.sidebar-social-menu ul li:nth-child(4)
-{
-    background-color: #e4405f;
-}*//*
-
-.sidebar-social-menu ul li .fa
-{
-    font-size: 25px;
-}
-
-.sidebar-social-menu ul li a
-{
-    position: relative;
-    text-align: center;
-    transition: .6s;
-    color: #000000;
-    color: #FAFAFA;
-}
-
-.sidebar-social-menu ul li:hover a
-{
-    text-shadow: 5px 5px 5px #000;
-    transform: translate(-2px, 2px);
-}
-
-.sidebar-social-menu ul li:nth-child(1) a
-{
-    color : #3b5999;
-}
-
-.sidebar-social-menu ul li:nth-child(2) a
-{
-    color: #55acee;
-}
-
-.sidebar-social-menu ul li:nth-child(3) a
-{
-    color: #0077B5;
-}
-
-.sidebar-social-menu ul li:nth-child(4) a
-{
-    color: #e4405f;
-}
-
-.copyright
-{
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    margin: 30px auto 20px auto;
-}
-
-.cipyright-link
-{
-    font-size: 14px;
-    font-family: Segoe UI;
-    color: #BF1A58;
-}*/
