--- a/css/responsive(960).css
+++ b/css/responsive(960).css
@@ -81,11 +81,11 @@
         width: 30%;
     }
 
-    .logo-img
+    /*.logo-img
     {
         height: 60px;
         width: 60px;
-    }
+    }*/
 
     .sidebar-content
     {
