--- a/css/style.css
+++ b/css/style.css
@@ -7,9 +7,11 @@
 body
 {
     background: #C7C7C7;
+    background-image: url(https://www.agdelta.com/wp-content/uploads/2018/06/website-parallax-background-C.jpg);
     height: 100%;
     width: 100%;
     position: fixed;
+    overflow: hidden;
 }
 
 a
