Some downloaded js file added for portfolio----- home, about, resume and Portfolio pages completed with responsive

--- a/css/responsive(350).css
+++ b/css/responsive(350).css
@@ -9,4 +9,17 @@
         display: none;
     }
 
+    /*####------Resume-----#####*/
+
+    .right-inner
+    {
+        margin: 0 2% 0 2%;
+    }
+
+    .right-inner .exp-wrap ul
+  {
+      width: 100%;
+  }
+
+
 }
