--- a/css/responsive(667).css
+++ b/css/responsive(667).css
@@ -38,7 +38,7 @@
 
     .sidebar-header-menu ul li
     {
-        padding: 18px 15px 0 15px;
+        padding: 18px 15px 0 10px;
     }
 
     .sidebar-header-menu ul li a
@@ -46,7 +46,7 @@
         color: #6F7275;
         display: flex;
         font-family: Segoe UI;
-        font-size: 16px;
+        font-size: 14px;
         font-weight: 500;
     }
 
@@ -57,12 +57,12 @@
 
     .sidebar-header-menu ul li a:hover
     {
-        color: #019BDB;
+        color: rgb(44, 44, 230);
     }
 
     .active
     {
-        color: #019BDB;
+        color: rgb(44, 44, 230);
     }
 
     .logo2
