--- a/css/responsive(414).css
+++ b/css/responsive(414).css
@@ -398,5 +398,62 @@ p.p2
     display: none;
 }
 
+/*---------_Contact_-------*/
+
+.grid-container1 {
+    display: grid;
+    grid-template-columns: auto;
+    grid-row-gap: 20px;
+    grid-column-gap: 20px;
+    width: 100%;
+    margin: 1% 0 10% 0;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+  }
+  
+  .grid-container1 > div {
+    background-color: rgba(255, 255, 255, 0.8);
+    text-align: center;
+    font-size: 30px;
+    height: 120px;
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    border-radius: 10px;
+    transition: 0.3s all ease;
+  }
+
+  .grid-item1
+  {
+    background: url(contact-back.jpg);
+    background-size: cover;
+    background-repeat: no-repeat;
+  }
+
+  .contact-icon
+  {
+    color: #DBA320;
+    font-size: 25px;
+  }
+
+  .grid-text
+  {
+    color: #fff;
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    letter-spacing: 1px;
+    margin: 15px auto;
+    font-size: 16px;
+  }
+
+  #map
+  {
+      height: 200px;
+      width: 100%;
+  }
+
 
 }
