--- a/css/responsive(414).css
+++ b/css/responsive(414).css
@@ -205,6 +205,11 @@ p.p2
     margin: 10% 0 15% 0;
   }
 
+  .fun-fact
+  {
+      margin: 10% 0 50% 0;
+  }
+
 
 
   /*######------Resume------######*/
