--- a/css/about.css
+++ b/css/about.css
@@ -290,7 +290,7 @@
 
   .fun-fact
   {
-    margin: 10% 0 50% 0;
+    margin: 10% 0 0 0;
     display: flex;
     flex-direction: column;
     justify-content: center;
