--- a/css/responsive(414).css
+++ b/css/responsive(414).css
@@ -207,7 +207,7 @@ p.p2
 
   .fun-fact
   {
-      margin: 10% 0 20% 0;
+      margin: 10% 0 40% 0;
   }
 
 
@@ -345,7 +345,7 @@ p.p2
 
 .hobby-container
 {
-    margin: 0 0 20% 0;
+    margin: 0 0 40% 0;
 }
 
 .hobby-container ul
@@ -403,6 +403,12 @@ p.p2
     display: none;
 }
 
+/*---------_Portfolio_-------*/
+.gallery-outer
+{
+    margin: 0 0 40% 0;
+}
+
 /*---------_Contact_-------*/
 
 .grid-container1 {
@@ -458,6 +464,11 @@ p.p2
   {
       height: 200px;
       width: 100%;
+  }
+
+  .contact-form 
+  {
+    margin: 20px 0 40% 0;
   }
 
 
