--- a/css/responsive(414).css
+++ b/css/responsive(414).css
@@ -63,6 +63,13 @@
     margin: 15px -108px 20px 0;
 }
 
+.container-img
+  {
+      height: 65vh;
+      width: 100%;
+      margin-top: -20px;
+  }
+
 /*####################------About-----######################*/
 p.p2
     {
