--- a/css/style.css
+++ b/css/style.css
@@ -14,6 +14,9 @@ body
     width: 100%;
     position: fixed;
     overflow: hidden;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
 
 a
@@ -450,67 +453,54 @@ h2.sidebar-about-get:after
 div.content
 {
     width: 74%;
-    height: 98vh;
+    height: 92vh;
     background-color: #FFFFFF;
     margin: auto auto auto 10%;
-    border-left: rgb(44, 44, 230) 9px solid;
-    border-right: rgb(44, 44, 230) 9px solid;
-    box-shadow: -10px 6px 40px 20px rgba(0, 0, 0, 0.2);
-    overflow: auto;
+    border: rgb(44, 44, 230) 4px solid;
+    /* border-right: rgb(44, 44, 230) 4px solid; */
+    border-radius: 10px;
+    box-shadow: -10px 6px 40px 20px rgba(0, 0, 0, 0.3);
+    padding: 7px;
+    overflow: hidden;
 }
 
-div.outer-div
-{
-    width: 100%;
-    height: 98vh;
-    background-color: #FFFFFF;
-    margin: auto;
-}
+/* width */
+::-webkit-scrollbar {
+    width: 5px;  
+    padding-right: 5px !important;
+  }
+  
+  /* Track */
+  ::-webkit-scrollbar-track {
+    background: #ffffff;
+    border-radius: 50px; 
+  }
+   
+  /* Handle */
+  ::-webkit-scrollbar-thumb {
+    background: rgba(44, 44, 230, 1); 
+    border-radius: 50px;
+  }
+  
+  /* Handle on hover */
+  ::-webkit-scrollbar-thumb:hover {
+    background: rgba(44, 44, 230, 1); 
+  }
 
-div.inner-1
-{
-    width: 99.5%;
-    height: 98vh;
-    background-color: #FFFFFF;
-    margin: auto;
-    border-left: #DDDDDD 0.5px solid;
-    border-right: #DDDDDD 0.5px solid;
-    box-shadow: 2px 6px 20px 5px rgba(0, 0, 0, 0.1);
-}
 
-div.inner-2
-{
-    width: 99.5%;
-    height: 98vh;
-    background-color: #FFFFFF;
-    margin: auto;
-    border-left: #DDDDDD 0.5px solid;
-    border-right: #DDDDDD 0.5px solid;
-    box-shadow: 2px 6px 20px 5px rgba(0, 0, 0, 0.1);
-}
-
-div.inner-3
-{
-    width: 99.5%;
-    height: 98vh;
-    background-color: #FFFFFF;
-    margin: auto;
-    border-left: #DDDDDD 0.5px solid;
-    border-right: #DDDDDD 0.5px solid;
-    box-shadow: 2px 6px 20px 5px rgba(0, 0, 0, 0.1);
-}
 
 div.inner-div
 {
     display: flex;
     flex-direction: row;
-    width: 99.5%;
+    width: 100%;
     height: 98vh;
     background-color: #FFFFFF;
     margin: auto;
-    border-left: #DDDDDD 0.5px solid;
-    border-right: #DDDDDD 0.5px solid;
+    border: #DDDDDD 0.5px solid;
+    /* border-right: #DDDDDD 0.5px solid; */
     box-shadow: 2px 6px 20px 5px rgba(0, 0, 0, 0.1);
+    border-radius: 5px;
     overflow: hidden;
 }
 
