--- a/css/contact.css
+++ b/css/contact.css
@@ -94,8 +94,10 @@
 
   #map
   {
-      height: 200px;
+      height: 120px;
       width: 80%;
+      /* border: solid #fff 2px; */
+      border-radius: 10px;
   }
 
 input,
