--- a/css/style.css
+++ b/css/style.css
@@ -15,13 +15,17 @@ body
     position: fixed;
     overflow: hidden;
     display: flex;
-    justify-content: center;
     align-items: center;
 }
 
 a
 {
     text-decoration: none;
+}
+
+section.main
+{
+    width: 100%;
 }
 
 .main-menu
